@@ -32,8 +32,23 @@
 if ( !is_object($xoopsUser) || !is_object($xoopsModule) || !$xoopsUser->isAdmin($xoopsModule->mid()) ) {
     exit("Access Denied");
 } else {
-	if(!empty($_POST)) foreach($_POST as $k => $v) ${$k} = StopXSS($v);
-	if(!empty($_GET)) foreach($_GET as $k => $v) ${$k} = StopXSS($v);
+	if(!empty($_POST)){
+		$config_item_handler = xoops_getHandler('configitem');
+		$criteria = new CriteriaCompo();
+		$criteria->add(new Criteria('conf_formtype', 'textarea'));
+		$criteria->add(new Criteria('conf_valuetype', 'text'));
+		$criteria->add(new Criteria('conf_id', '(' . implode(', ', $_POST['conf_ids']) . ')', 'IN'));
+
+		$allowed_html_config_items = $config_item_handler->getObjects($criteria);
+		foreach ($allowed_html_config_items as $configObj) {
+			$allowedHTML[] = $configObj->getVar('conf_name');
+		}
+	} else {
+		$allowedHTML = array();
+	}
+
+	if(!empty($_POST)){ foreach($_POST as $k => $v){ if (!in_array($k,$allowedHTML)){${$k} = StopXSS($v);}else{${$k} = $v;}}}
+	if(!empty($_GET)){ foreach($_GET as $k => $v){ if (!in_array($k,$allowedHTML)){${$k} = StopXSS($v);}else{${$k} = $v;}}}
 	$op = (isset($_GET['op']))?trim(StopXSS($_GET['op'])):((isset($_POST['op']))?trim(StopXSS($_POST['op'])):'list');
     if (isset($_GET['confcat_id'])) {
         $confcat_id = intval($_GET['confcat_id']);
