@@ -5,6 +5,7 @@ ImpressCMS ChangeLog
 '''Fixed'''
 * A bug was preventing the deletion of any block (real_therplima/skenow/andrewvincent)
 * Deleting any template clone would delete the master set (real_therplima/skenow/sato-san)
+* HTML in Config Options in System Admin > Preferences was striped out (malanciault)
 
 ===2008-07-29 : ImpressCMS 1.0.1 "Janus" Final===
 
